<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.xinwen.view.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.example.xinwen.view.search.SearchFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_my"
        android:name="com.example.xinwen.view.my.MyFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_my" />
    <fragment
        android:id="@+id/garbageClassificationFragment"
        android:name="com.example.xinwen.view.garbageClassification.GarbageClassificationFragment"
        android:label="fragment_garbage_classification"
        tools:layout="@layout/fragment_garbage_classification" >
        <action
            android:id="@+id/action_garbageClassificationFragment_to_garbageResultFragment"
            app:destination="@id/garbageResultFragment" >
        </action>
    </fragment>
    <fragment
        android:id="@+id/garbageResultFragment"
        android:name="com.example.xinwen.view.garbageClassification.GarbageResultFragment"
        android:label="fragment_garbage_result_list"
        tools:layout="@layout/fragment_garbage_result_list" />
    <fragment
        android:id="@+id/garbageGuideFragment"
        android:name="com.example.xinwen.view.garbageClassification.GarbageGuideFragment"
        android:label="fragment_garbage_guide"
        tools:layout="@layout/fragment_garbage_guide" />
</navigation>